@startuml

title __USER's Class Diagram__\n

  namespace com.example.our_planner {
    namespace ui.user {
      class com.example.our_planner.ui.user.ForgotPasswordActivity {
          - emailET : EditText
          - goBackB : Button
          - receiveRecoveryEmailB : Button
          + setToast()
          # onCreate()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.user {
      class com.example.our_planner.ui.user.LoginActivity {
          - btnPassword : Button
          - btnRegister : Button
          - btnSign : Button
          - txtEmail : EditText
          - txtPassword : EditText
          # onCreate()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.user {
      class com.example.our_planner.ui.user.LoginActivityViewModel {
          - mToast : MutableLiveData<String>
          + LoginActivityViewModel()
          + getToast()
          + isUserLogged()
          + login()
          + setToast()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.user {
      class com.example.our_planner.ui.user.RegisterActivity {
          - btnCancel : Button
          - btnRegister : Button
          - txtEmail : EditText
          - txtPassword : EditText
          - txtRepeatPassword : EditText
          - txtUsername : EditText
          # onCreate()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.user {
      class com.example.our_planner.ui.user.RegisterActivityViewModel {
          - mToast : MutableLiveData<String>
          + RegisterActivityViewModel()
          + getToast()
          + register()
          + setToast()
      }
    }
  }
  

  com.example.our_planner.ui.user.ForgotPasswordActivity .up.|> com.example.our_planner.DataBaseAdapter.DBInterface
  com.example.our_planner.ui.user.ForgotPasswordActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.our_planner.ui.user.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.our_planner.ui.user.LoginActivity o-- com.example.our_planner.ui.user.LoginActivityViewModel : viewModel
  com.example.our_planner.ui.user.LoginActivityViewModel .up.|> com.example.our_planner.DataBaseAdapter.DBInterface
  com.example.our_planner.ui.user.LoginActivityViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.our_planner.ui.user.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.our_planner.ui.user.RegisterActivity o-- com.example.our_planner.ui.user.RegisterActivityViewModel : viewModel
  com.example.our_planner.ui.user.RegisterActivityViewModel .up.|> com.example.our_planner.DataBaseAdapter.DBInterface
  com.example.our_planner.ui.user.RegisterActivityViewModel -up-|> androidx.lifecycle.AndroidViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
